P6-69 changed sequence to #

--- a/ui/src/assets/i18n/de.json
+++ b/ui/src/assets/i18n/de.json
@@ -110,8 +110,8 @@
 					"tooltip": "Dies schaltet die Suche in der tabelle über zeitstempel, Klassifizierungscode, Event Typ Code, vorheriger Hafen, nächster Hafen und der momentane Hafen"
 				},
 				"sequence": {
-					"label": "Sequenz",
-					"tooltip": "Wie oft die Planung eines Prozesses geändert wurde. Dies verändert sich automatisch."
+					"label": "#",
+					"tooltip": "Wie oft die Planung eines Prozesses geändert wurde. Dies verändert sich automatisch"
 				},
 				"terminalId": {
 					"label": "Terminal Id",
