--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -62,6 +62,10 @@
 			"select": "Select port"
 		},
 		"save": {
+			"editor": {
+				"failure": "Error while adding port call timestamp",
+				"success": "Successfully added new port call timestamp to vessel"
+			},
 			"label": "Save"
 		},
 		"table": {
