P6-69 added localizations for outbound/inbound icons

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -13,6 +13,8 @@
 		},
 		"company": "Company",
 		"direction": {
+			"inbound": "Inbound",
+			"outbound": "Outbound",
 			"select": "Select direction"
 		},
 		"download": {
