--- a/ui/src/assets/i18n/de.json
+++ b/ui/src/assets/i18n/de.json
@@ -13,6 +13,8 @@
 		},
 		"company": "Firma",
 		"direction": {
+			"inbound": "Eingehend",
+			"outbound": "Ausgehend",
 			"select": "Richtung auswählen"
 		},
 		"download": {
@@ -64,7 +66,7 @@
 		"save": {
 			"editor": {
 				"failure": "Fehler beim Hinzufügen des Hafen-Anfrage-Zeitstempels",
-				"success": "Neuer Hafen-Anfragen-Zeitstempel wurde erfolgreich zum Schiff hinzugefügt."
+				"success": "Neuer Hafen-Anfrage-Zeitstempel wurde erfolgreich zum Schiff hinzugefügt."
 			},
 			"label": "Speichern"
 		},
