P6-117 Change Vessel Selector default caption

--- a/ui/src/assets/i18n/de.json
+++ b/ui/src/assets/i18n/de.json
@@ -157,7 +157,7 @@
 			"label": "Schiff",
 			"name": "Schiffsname",
 			"number": "IMO Nummer",
-			"select": "Schiff auswählen",
+			"select": "Alle Schiffe",
 			"serviceName": "Servicename",
 			"size": "Schiffsgröße (TEU)",
 			"validation": {
