--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -80,6 +80,10 @@
 			"delete": {
 				"tooltip": "Delete the timestamp"
 			},
+      "placeHolder":{
+        "label": "Please select a Transport Call from the list above!",
+        "tooltip": "Please select a Transport Call from the table above, to show its coresponding Port Call Timestamps!"
+      },
 			"header": {
 				"berthId": {
 					"label": "Berth Id",
@@ -105,6 +109,7 @@
 					"label": "Next port",
 					"tooltip": "What is the next port in the rotation?"
 				},
+
 				"portOfCall": {
 					"label": "Port of call",
 					"tooltip": "What is the approaching port of call? For the agent: this is your own port"
@@ -169,6 +174,9 @@
         },
         "UNLocationName": {
           "label": "UN Location Name"
+        },
+        "transportCallID": {
+          "label": "Transport Call ID"
         },
         "transportCallNumber": {
           "label": "Call Number"
