P6-138 refactored timestamp editor

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -71,6 +71,7 @@
 		},
 		"save": {
 			"editor": {
+        "label": "Create Timestamp",
 				"failure": "Error while adding port call timestamp",
 				"success": "Successfully added new port call timestamp to vessel"
 			},
