P6-138 Take over publisher and set Messageing Direction

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -204,8 +204,8 @@
         "transportCallID": {
           "label": "Transport Call ID"
         },
-        "transportCallNumber": {
-          "label": "Call Number"
+        "transportCallSequenceNumber": {
+          "label": "Call Sequence Number"
         },
         "carrierVoyageNumber":{
           "label": "Carrier Voyage Number"
