--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -255,8 +255,15 @@
       "number": "IMO number",
       "select": "All vessels",
       "serviceName": "Service name",
+      "operatorCarrierID": "Operator Carrier ID",
+      "callSignNumber": "Call Sign Number",
       "size": "Vessel size (TEU)",
+      "flag": "Vessel Flag",
       "validation": {
+        "flag": {
+          "empty": "The vessel name is required",
+          "length": "The vessel flag should be exactly 2 characters long"
+        },
         "name": {
           "empty": "The vessel name is required",
           "length": {
@@ -269,6 +276,12 @@
           "length": {
             "max": "Maximum length is 7",
             "min": "The IMO should be 7 digits"
+          }
+        },
+        "callSignNumber": {
+          "empty": "The Calllsign Number is required",
+          "length": {
+            "max": "Maximum length is 10"
           }
         },
         "size": {
