Wrapping TransportCall into Transport

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -209,6 +209,9 @@
         "carrierVoyageNumber": {
           "label": "Carrier Voyage Number"
         },
+        "vessel": {
+          "label": "Vessel"
+        },
         "facilityTypeCode": {
           "label": "Facility Type"
         },
