--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -238,6 +238,9 @@
         "transportCallSequenceNumber": {
           "label": "Call Sequence Number"
         },
+          "estimatedDateofArrival": {
+            "label": "Estimated Date of Arrival"
+          },
         "carrierVoyageNumber": {
           "label": "Carrier Voyage Number"
         },
