fixed typo in en.json

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -202,8 +202,8 @@
     }
     },
     "publisherRole": {
-      "tooltip":"publisher role",
-      "label": "publisher role"
+      "tooltip":"Publisher role",
+      "label": "Publisher role"
     },
     "transportCall": {
       "add": "Add a new Transport Call",
