color explanation on in tooltip + height on each row
Added better explanation for tooltips on ingoing/outgoing calls and fixed the height on timestamp table calls to be consistent

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -136,7 +136,13 @@
           "tooltip": "When was the event communicated (local time for port)"
         },
         "eventDeliveryStatus": {
-          "tooltip": "Delivery status of the timestamp"
+          "label": "status of Timestamp",
+          "tooltip": {
+            "green": "Green: event is ingoing",
+            "yellow": "Yellow: event is pending for delivery",
+            "red": "Red: event is attempting delivery",
+            "grey": "Grey: event is outgoing"
+          }
         },
         "nextPort": {
           "label": "Next port",
