--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -135,6 +135,9 @@
           "label": "Message comm. time. ",
           "tooltip": "When was the event communicated (local time for port)"
         },
+        "eventDateTime": {
+          "label": "Event date time"
+        },
         "eventDeliveryStatus": {
           "tooltip": "Delivery status of the timestamp"
         },
@@ -197,7 +200,18 @@
         "log": "Log date"
       },
       "select": "Select timestamp",
-      "time": "Time"
+      "time": "Time",
+      "validation": {
+        "timestampType": {
+          "required": "Timestamp Type is required when creating a timestamp!"
+        },
+        "eventTimestamp": {
+          "required": "Event Date Time is required!"
+        },
+        "facilityTypeCode": {
+          "required": "Facility Type Code is required when creating a timestamp!"
+        }
+      }
     },
     "transport": {
       "label": "Transport Call",
