--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -106,6 +106,9 @@
       "accept": {
         "tooltip": "Accept timestamp and send a response as"
       },
+      "decline": {
+        "tooltip": "Decine timestamp and send a new timstamp"
+      },
       "delete": {
         "tooltip": "Delete the timestamp"
       },
