Show declined eventTimeStamp in secondary card
- Show declined eventTimeStamp in secondary card as additional information for the enduser

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -135,6 +135,7 @@
         },
         "eventTimestamp": {
           "label": "Event timestamp",
+          "declinedLabel": "Declined event timestamp",
           "tooltip": "What is the estimated, requested, planned or actual timestamp of the event (local time for port)"
         },
         "logOfTimestamp": {
