TimestampTable: Support filtering on negotiation cycle
Signed-off-by: Niels Thykier <nt@asseco.dk>

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -202,6 +202,9 @@
       },
       "pagination": "Page {currentPage} of {totalPages} ({totalRecords} entries)"
     },
+    "negotiationCycle": {
+      "select": "Select negotiation cycle"
+    },
     "terminal": {
       "label": "Terminal",
       "select": "Select terminal"
